--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -7,6 +7,7 @@
 
 .add-option {
     display: flex;
+    flex-direction: column;
     padding: $medium-size;
 }
 
@@ -17,5 +18,16 @@
     padding: $s-size;
     border-bottom: .3rem solid darken($dark-blue, 10%);
     flex-grow: 1;
-    margin-right: $s-size;
+    margin: 0 0 $s-size 0;
+}
+
+// Will apply this style for devices with width more than 45rem
+@media (min-width: $desktop-breakpoint) {
+    .add-option {
+        flex-direction: row;
+    }
+
+    .add-option__input {
+        margin: 0 $s-size 0 0;
+    }
 }
