--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $s-size;
     padding: 2.4rem;
     width: 100%;
 }
@@ -22,7 +22,7 @@
     border-bottom: .3rem solid darken($purple, 10%);
     color: white;
     font-weight: 500;
-    padding: $s-size;
+    padding: $medium-size;
 }
 
 .button--link {
@@ -30,4 +30,10 @@
     border: none;
     color: $off-white;
     padding: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
 }
